apply-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jessie1
spec:
  containers:
  - name: jessie
    image: girishkalele/jessie-full:1.0
    command: ["sh", "-c"]
    args: ["while true ; do sleep 3600 ; done"]
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  name: jessie2
spec:
  containers:
  - name: jessie
    image: girishkalele/jessie-full:1.0
    command: ["sh", "-c"]
    args: ["while true ; do sleep 3600 ; done"]
  restartPolicy: Never
# ---
# apiVersion: extensions/v1beta1
# kind: Deployment
# metadata:
#   name: my-nginx1
#   labels:
#     kubernetes.io/cluster-service: "true"  
# spec:
#   replicas: 2
#   template:
#     metadata:
#       labels:
#         run: my-nginx1
#     spec:
#       containers:
#       - name: my-nginx
#         image: nginx
#         ports:
#         - containerPort: 80
# ---
# apiVersion: v1
# kind: ReplicationController
# metadata:
#   name: my-nginx2
#   labels:
#     kubernetes.io/cluster-service: "true"  
# spec:
#   replicas: 2
#   template:
#     metadata:
#       labels:
#         run: my-nginx2
#     spec:
#       containers:
#       - name: my-nginx
#         image: nginx
#         ports:
#         - containerPort: 80
