heapster-controller.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: heapster-v1.2.0-beta.2
  namespace: kube-system
  labels:
    k8s-app: heapster
    kubernetes.io/cluster-service: "true"
    version: v1.2.0-beta.2
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: heapster
      version: v1.2.0-beta.2
  template:
    metadata:
      labels:
        k8s-app: heapster
        version: v1.2.0-beta.2
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
        scheduler.alpha.kubernetes.io/tolerations: '[{"key":"CriticalAddonsOnly", "operator":"Exists"}]'
    spec:
      containers:
        - image: gcr.io/google_containers/heapster:v1.2.0-beta.2
          name: heapster
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 82m
              memory: 216Mi
            requests:
              cpu: 82m
              memory: 216Mi
          command:
            - /heapster
            - --source=kubernetes.summary_api:''
            - --sink=influxdb:http://monitoring-influxdb:8086
        - image: gcr.io/google_containers/heapster:v1.2.0-beta.2
          name: eventer
          resources:
            limits:
              cpu: 100m
              memory: 206800Ki
            requests:
              cpu: 100m
              memory: 206800Ki
          command:
            - /eventer
            - --source=kubernetes:''
            - --sink=influxdb:http://monitoring-influxdb:8086
        - image: gcr.io/google_containers/addon-resizer:1.5
          name: heapster-nanny
          resources:
            limits:
              cpu: 50m
              memory: 92960Ki
            requests:
              cpu: 50m
              memory: 92960Ki
          command:
            - /pod_nanny
            - --cpu=80m
            - --extra-cpu=0.5m
            - --memory=140Mi
            - --extra-memory=4Mi
            - --threshold=5
            - --deployment=heapster-v1.2.0-beta.2
            - --container=heapster
            - --poll-period=300000
            - --estimator=exponential
        - image: gcr.io/google_containers/addon-resizer:1.5
          name: eventer-nanny
          resources:
            limits:
              cpu: 50m
              memory: 92960Ki
            requests:
              cpu: 50m
              memory: 92960Ki
          command:
            - /pod_nanny
            - --cpu=100m
            - --extra-cpu=0m
            - --memory=190Mi
            - --extra-memory=500Ki
            - --threshold=5
            - --deployment=heapster-v1.2.0-beta.2
            - --container=eventer
            - --poll-period=300000
            - --estimator=exponential
