pod-busybox2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-2
spec:
  containers:
  - name: wget-test
    image: gcr.io/google_containers/busybox:1.24
    command: ["/bin/sh", "-c"]
    # args: ["wget --timeout=30 google.com"]
    args: ["sleep 3600"]    
  restartPolicy: Never
