svc-externalname.yaml
kind: Service
apiVersion: v1
metadata:
  name: test1
spec:
  type: ExternalName
  externalName: www.google.com
